# CryptoHackPals

./: .gitignore  Cargo.toml  README.md
hacks/block_ciphers/aes/confusion_through_substitution/: Cargo.toml  README.md
hacks/block_ciphers/aes/confusion_through_substitution/src/: lib.rs
hacks/diffie_hellman/additive/: Cargo.toml
hacks/diffie_hellman/additive/src/: lib.rs
hacks/diffie_hellman/diffie_hellman_starter_1/: Cargo.toml  README.md
hacks/diffie_hellman/diffie_hellman_starter_2/: Cargo.toml  README.md
hacks/diffie_hellman/diffie_hellman_starter_3/: Cargo.toml  README.md
hacks/diffie_hellman/diffie_hellman_starter_4/: Cargo.toml  README.md
hacks/diffie_hellman/diffie_hellman_starter_5/: Cargo.toml  README.md
hacks/diffie_hellman/diffie_hellman_starter_5/src/: lib.rs
hacks/diffie_hellman/parameter_injection/: Cargo.toml  README.md
hacks/diffie_hellman/parameter_injection/src/: lib.rs
hacks/elliptic_curves/: curveball.md
hacks/elliptic_curves/background_reading/: Cargo.toml  README.md
hacks/elliptic_curves/curves_and_logs/: Cargo.toml  README.md
hacks/elliptic_curves/curves_and_logs/src/: lib.rs
hacks/elliptic_curves/efficient_exchange/: Cargo.toml  README.md
hacks/elliptic_curves/efficient_exchange/src/: lib.rs
hacks/elliptic_curves/exceptional_curves/: Cargo.toml  README.md
hacks/elliptic_curves/point_addition/: Cargo.toml  README.md
hacks/elliptic_curves/point_negation/: Cargo.toml  README.md
hacks/elliptic_curves/scalar_multiplication/: Cargo.toml  README.md
hacks/elliptic_curves/scalar_multiplication/src/: lib.rs
hacks/elliptic_curves/smooth_criminal/: Cargo.toml  README.md
hacks/elliptic_curves/smooth_criminal/src/: lib.rs
hacks/general/mathematics/: README.md
hacks/rsa/everything_is_big/: Cargo.toml  README.md
hacks/rsa/everything_is_still_big/: Cargo.toml  README.md
hacks/rsa/everything_is_still_big/src/: lib.rs
hacks/rsa/factoring/: Cargo.toml  README.md
hacks/rsa/factoring/src/: lib.rs
hacks/rsa/inferius_prime/: Cargo.toml
hacks/rsa/inferius_prime/src/: lib.rs
hacks/rsa/infinite_descent/: Cargo.toml  README.md
hacks/rsa/manyprime/: Cargo.toml  README.md
hacks/rsa/marins_secrets/: Cargo.toml  README.md
hacks/rsa/modulus_inutilis/: Cargo.toml  README.md
hacks/rsa/monoprime/: Cargo.toml  README.md
hacks/rsa/rsa_starter_1/: Cargo.toml  README.md
hacks/rsa/rsa_starter_2/: Cargo.toml  README.md
hacks/rsa/rsa_starter_3/: Cargo.toml
hacks/rsa/rsa_starter_4/: Cargo.toml  README.md
hacks/rsa/rsa_starter_5/: Cargo.toml
hacks/rsa/rsa_starter_6/: Cargo.toml  README.md
hacks/rsa/salty/: Cargo.toml  README.md
hacks/rsa/signing_server/: Cargo.toml  README.md
hacks/rsa/square_eyes/: Cargo.toml  README.md
pals/set1/_01_convert_hex_to_base_64/: Cargo.toml  README.md
pals/set1/_02_fixed_xor/: Cargo.toml  README.md
pals/set1/_03_single_byte_xor_cipher/: Cargo.toml  README.md
pals/set1/_03_single_byte_xor_cipher/src/: lib.rs
pals/set1/_04_detect_single_character_xor/: Cargo.toml  README.md
pals/set1/_04_detect_single_character_xor/src/: lib.rs
pals/set1/_05_implement_repeating_key_xor/: Cargo.toml  README.md
pals/set1/_06_break_repeating_key_xor/: Cargo.toml  README.md
pals/set1/_06_break_repeating_key_xor/src/: lib.rs
pals/set1/_07_aes_in_ecb_mode/: Cargo.toml  README.md
pals/set1/_08_detect_aes_in_ecb_mode/: Cargo.toml  README.md
pals/set2/_09_implement_pkcs7_padding/: Cargo.toml  README.md
pals/set2/_10_implement_cbc_mode/: Cargo.toml  README.md
pals/set2/_11_an_ecb_cbc_detection_oracle/: Cargo.toml  README.md
pals/set2/_11_an_ecb_cbc_detection_oracle/src/: lib.rs
pals/set2/_12_byte_at_a_time_ecb_decryption_simple/: Cargo.toml  README.md
pals/set2/_12_byte_at_a_time_ecb_decryption_simple/src/: lib.rs
pals/set2/_13_ecb_cut_and_paste/: Cargo.toml  README.md
pals/set2/_13_ecb_cut_and_paste/src/: lib.rs
pals/set2/_14_byte_at_a_time_ecb_decryption_harder/: Cargo.toml  README.md
pals/set2/_15_pkcs7_padding_validation/: Cargo.toml  README.md
pals/set2/_16_cbc_bitflipping_attacks/: Cargo.toml  README.md
pals/set2/_16_cbc_bitflipping_attacks/src/: lib.rs
pals/set3/_17_the_cbc_padding_oracle/: Cargo.toml  README.md
pals/set3/_18_implement_ctr_the_stream_cipher_mode/: Cargo.toml  README.md
pals/set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions/: Cargo.toml  README.md
pals/set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions/src/: lib.rs
pals/set3/_20_break_fixed_nonce_ctr_statistically/: Cargo.toml  README.md
pals/set3/_22_crack_an_mt19937_seed/: Cargo.toml  README.md
pals/set3/_22_crack_an_mt19937_seed/src/: lib.rs
pals/set3/_23_clone_an_mt19937_rng_from_its_output/: Cargo.toml  README.md
pals/set3/_23_clone_an_mt19937_rng_from_its_output/src/: lib.rs
pals/set3/_24_create_the_mt_19937_stream_cipher_ans_break_it/: Cargo.toml  README.md
pals/set3/_24_create_the_mt_19937_stream_cipher_ans_break_it/src/: lib.rs
pals/set4/_25_break_random_access_read_write_aes_ctr/: Cargo.toml  README.md
pals/set4/_25_break_random_access_read_write_aes_ctr/src/: lib.rs
pals/set4/_26_ctr_bitflipping/: Cargo.toml  README.md
pals/set4/_27_recover_the_key_from_cbc_with_iv_is_key/: Cargo.toml  README.md
pals/set4/_27_recover_the_key_from_cbc_with_iv_is_key/src/: lib.rs
pals/set4/_31_implement_and_break_hmac_sha1_with_an_artificial_timing_leak/: Cargo.toml  README.md
pals/set4/_31_implement_and_break_hmac_sha1_with_an_artificial_timing_leak/src/: lib.rs
pals/set4/_32_break_hmac_rsa1_with_a_slightly_less_artificial_timing_leak/: Cargo.toml  README.md
pals/set4/_32_break_hmac_rsa1_with_a_slightly_less_artificial_timing_leak/src/: lib.rs
pals/set5/_40_implement_an_e3_rsa_broadcast_attack/: Cargo.toml  README.md
pals/set5/_40_implement_an_e3_rsa_broadcast_attack/src/: lib.rs
pals/set6/_43_dsa_key_recovery_from_nonce/: Cargo.toml  README.md
pals/set6/_43_dsa_key_recovery_from_nonce/src/: lib.rs
pals/set6/_44_dsa_nonce_recovery_from_repeated_nonce/: Cargo.toml  README.md
pals/set6/_44_dsa_nonce_recovery_from_repeated_nonce/src/: lib.rs
(+151 files in other folders)
