[workspace]
members = [
    "hacks/general/encoding/ascii",
    "hacks/general/encoding/base_64",
    "hacks/general/encoding/bytes_and_big_integers",
    "hacks/general/encoding/encoding_challenge",
    "hacks/general/encoding/hex",
    "hacks/general/xor/xor_starter",
    "hacks/general/xor/xor_properties",
    "hacks/general/xor/favourite_byte",
    "hacks/general/xor/you_either_know_xor_you_dont",
    "hacks/general/xor/lemur_xor",
    "hacks/general/mathematics/greatest_common_divisor",
    "hacks/general/mathematics/extended_gcd",
    "hacks/general/mathematics/modular_arithmetic_1",
    "hacks/general/mathematics/modular_arithmetic_2",
    "hacks/general/mathematics/modular_inverting",
    "hacks/block_ciphers/aes/structure_of_aes",
    "hacks/block_ciphers/aes/round_keys",
    "hacks/block_ciphers/aes/confusion_through_substitution",
    "hacks/block_ciphers/aes/diffusion_through_permutation",
    "hacks/block_ciphers/aes/bringing_it_all_together",
    "hacks/block_ciphers/block_cipher_modes/passwords_as_keys",
    "hacks/block_ciphers/block_cipher_modes/ecb_oracle",
    "hacks/block_ciphers/block_cipher_modes/symmetry",
    "hacks/block_ciphers/block_cipher_modes/ecb_cbc_wtf",
    "hacks/block_ciphers/block_cipher_modes/ctrime",
    "hacks/block_ciphers/block_cipher_modes/stream_of_consciousness",
    "hacks/block_ciphers/block_cipher_modes/flipping_cookie",
    "pals/set1/_02_fixed_xor",
    "pals/set1/_03_single_byte_xor_cipher",
    "pals/set1/_04_detect_single_character_xor",
    "pals/set1/_05_implement_repeating_key_xor",
    "pals/set1/_06_break_repeating_key_xor",
    "pals/set1/_08_detect_aes_in_ecb_mode",
    "pals/set2/_09_implement_pkcs7_padding",
    "pals/set2/_10_implement_cbc_mode",
    "pals/set2/_11_an_ecb_cbc_detection_oracle",
    "pals/set2/_12_byte_at_a_time_ecb_decryption_simple",
    "pals/set2/_13_ecb_cut_and_paste",
    "pals/set2/_14_byte_at_a_time_ecb_decryption_harder",
    "pals/set2/_15_pkcs7_padding_validation",
    "pals/set2/_16_cbc_bitflipping_attacks",
    "pals/set3/_17_the_cbc_padding_oracle",
    "pals/set3/_18_implement_ctr_the_stream_cipher_mode",
    "pals/set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions",
    "pals/set3/_20_break_fixed_nonce_ctr_statistically",
    "pals/set3/_21_implement_the_mt19937_mersenne_twister_rng",
    "pals/set3/_22_crack_an_mt19937_seed",
    "pals/set3/_23_clone_an_mt19937_rng_from_its_output",
    "pals/set3/_24_create_the_mt_19937_stream_cipher_ans_break_it",
]
