[workspace]
members = [
    "hacks/general/encoding/ascii",
    "hacks/general/encoding/base_64",
    "hacks/general/encoding/bytes_and_big_integers",
    "hacks/general/encoding/encoding_challenge",
    "hacks/general/encoding/hex",
    "hacks/general/xor/xor_starter",
    "hacks/general/xor/xor_properties",
    "hacks/general/xor/favourite_byte",
    "hacks/general/xor/you_either_know_xor_you_dont",
    "hacks/general/xor/lemur_xor",
    "hacks/general/mathematics/greatest_common_divisor",
    "hacks/general/mathematics/extended_gcd",
    "hacks/general/mathematics/modular_arithmetic_1",
    "hacks/general/mathematics/modular_arithmetic_2",
    "hacks/general/mathematics/modular_inverting",
    "hacks/block_ciphers/aes/structure_of_aes",
    "hacks/block_ciphers/aes/round_keys",
    "hacks/block_ciphers/aes/confusion_through_substitution",
    "hacks/block_ciphers/aes/diffusion_through_permutation",
    "hacks/block_ciphers/block_cipher_modes/passwords_as_keys",
    "hacks/block_ciphers/block_cipher_modes/ecb_oracle",
    "hacks/block_ciphers/block_cipher_modes/symmetry",
    "hacks/block_ciphers/block_cipher_modes/ecb_cbc_wtf",
    "hacks/block_ciphers/block_cipher_modes/ctrime",
    "hacks/block_ciphers/block_cipher_modes/stream_of_consciousness",
    "hacks/block_ciphers/block_cipher_modes/flipping_cookie",
    "hacks/rsa/rsa_starter_1",
    "hacks/rsa/rsa_starter_2",
    "hacks/rsa/rsa_starter_3",
    "hacks/rsa/rsa_starter_4",
    "hacks/rsa/rsa_starter_5",
    "hacks/rsa/rsa_starter_6",
    "hacks/rsa/factoring",
    "hacks/rsa/inferius_prime",
    "hacks/rsa/monoprime",
    "hacks/rsa/square_eyes",
    "hacks/rsa/manyprime",
    "hacks/rsa/salty",
    "hacks/rsa/modulus_inutilis",
    "hacks/rsa/everything_is_big",
    "hacks/rsa/everything_is_still_big",
    "hacks/rsa/infinite_descent",
    "hacks/rsa/marins_secrets",
    "hacks/rsa/signing_server",
    "hacks/diffie_hellman/diffie_hellman_starter_1",
    "hacks/diffie_hellman/diffie_hellman_starter_2",
    "hacks/diffie_hellman/diffie_hellman_starter_3",
    "hacks/diffie_hellman/diffie_hellman_starter_4",
    "hacks/diffie_hellman/diffie_hellman_starter_5",
    "hacks/diffie_hellman/parameter_injection",
    "hacks/diffie_hellman/additive",
    "hacks/elliptic_curves/background_reading",
    "hacks/elliptic_curves/point_negation",
    "hacks/elliptic_curves/point_addition",
    "hacks/elliptic_curves/scalar_multiplication",
    "hacks/elliptic_curves/curves_and_logs",
    "hacks/elliptic_curves/efficient_exchange",
    "hacks/elliptic_curves/smooth_criminal",
    "hacks/elliptic_curves/exceptional_curves",
    "pals/set1/_02_fixed_xor",
    "pals/set1/_03_single_byte_xor_cipher",
    "pals/set1/_04_detect_single_character_xor",
    "pals/set1/_05_implement_repeating_key_xor",
    "pals/set1/_06_break_repeating_key_xor",
    "pals/set1/_08_detect_aes_in_ecb_mode",
    "pals/set2/_09_implement_pkcs7_padding",
    "pals/set2/_11_an_ecb_cbc_detection_oracle",
    "pals/set2/_12_byte_at_a_time_ecb_decryption_simple",
    "pals/set2/_13_ecb_cut_and_paste",
    "pals/set2/_15_pkcs7_padding_validation",
    "pals/set2/_16_cbc_bitflipping_attacks",
    "pals/set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions",
    "pals/set3/_20_break_fixed_nonce_ctr_statistically",
    "pals/set3/_21_implement_the_mt19937_mersenne_twister_rng",
    "pals/set3/_22_crack_an_mt19937_seed",
    "pals/set3/_23_clone_an_mt19937_rng_from_its_output",
    "pals/set3/_24_create_the_mt_19937_stream_cipher_ans_break_it",
    "pals/set4/_25_break_random_access_read_write_aes_ctr",
    "pals/set4/_26_ctr_bitflipping",
    "pals/set4/_27_recover_the_key_from_cbc_with_iv_is_key",
    "pals/set4/_28_implement_a_sha_1_keyed_mac",
    "pals/set4/_31_implement_and_break_hmac_sha1_with_an_artificial_timing_leak",
    "pals/set4/_32_break_hmac_rsa1_with_a_slightly_less_artificial_timing_leak",
    "pals/set5/_33_implement_diffie_hellman",
    "pals/set5/_34_parameter_injection",
    "pals/set5/_35_implement_dh_with_malicious_g_parameters",
    "pals/set5/_39_implement_rsa",
    "pals/set5/_40_implement_an_e3_rsa_broadcast_attack",
    "pals/set6/_41_implement_unpadded_message_recovery_oracle",
    "pals/set6/_42_bleichenbachers_e3_rsa_attack",
    "pals/set6/_43_dsa_key_recovery_from_nonce",
    "pals/set6/_45_dsa_parameter_tampering",
]
