[package]
name = "additive"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telnet = ""
serde_json = ""
serde = { version = "1.0", features = ["derive"] }
num = "0.4"
hex = "0.4"
sha-1 = "0.9.6"
openssl = "0.10.34"
