[package]
name = "additive"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
num = "0.4"
hex = "0.4"
sha-1 = "0.9.6"
openssl = "0.10.34"
diffie_hellman_starter_1 = {path = "../diffie_hellman_starter_1"}
