[package]
name = "efficient_exchange"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scalar_multiplication = {path = "../scalar_multiplication"}
point_addition = {path = "../point_addition"}
curves_and_logs = {path = "../curves_and_logs"}
hex = "0.4"
sha-1 = "0.9.6"
num-integer = "0.1.44"
aes = "0.7.2"
block-modes = "0.8.1"
