[package]
name = "factoring"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#num = "0.2.1"
num-primes = "0.1.2"
num-bigint = "0.2"
num-traits = "0.2.14"
num-integer = "0.1.44"
