[package]
name = "_04_detect_single_character_xor"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_02_fixed_xor = {path = "../../../pals/set1/_02_fixed_xor"}
_03_single_byte_xor_cipher = {path = "../../../pals/set1/_03_single_byte_xor_cipher"}
hex = "0.4"
ascii = "1.0.0"
