[package]
name = "_12_byte_at_a_time_ecb_decryption_simple"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
ascii = ""
rand = "0.8.3"
openssl = ""
