[package]
name = "_13_ecb_cut_and_paste"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_09_implement_pkcs7_padding = {path = "../_09_implement_pkcs7_padding"}
hex = "0.4"
rand = "0.8.3"
openssl = ""
ascii = "1.0.0"
