[package]
name = "_16_cbc_bitflipping_attacks"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_09_implement_pkcs7_padding = {path = "../_09_implement_pkcs7_padding"}
_19_break_fixed_nonce_ctr_mode_usong_substitutions = {path = "../../set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions"}
hex = "0.4"
rand = "0.8.3"
openssl = ""
ascii = "1.0.0"
lazy_static = ""
