[package]
name = "_19_break_fixed_nonce_ctr_mode_usong_substitutions"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
itertools = "0.10.0"
base64 ="0.13.0"
ascii = ""
whatlang = ""

_02_fixed_xor = {path = "../../../pals/set1/_02_fixed_xor"}
_03_single_byte_xor_cipher = {path = "../../../pals/set1/_03_single_byte_xor_cipher"}
_05_implement_repeating_key_xor = {path = "../../../pals/set1/_05_implement_repeating_key_xor"}
_06_break_repeating_key_xor = {path = "../../../pals/set1/_06_break_repeating_key_xor"}
