[package]
name = "_24_create_the_mt_19937_stream_cipher_ans_break_it"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_21_implement_the_mt19937_mersenne_twister_rng = {path = "../_21_implement_the_mt19937_mersenne_twister_rng"}
_23_clone_an_mt19937_rng_from_its_output = {path = "../_23_clone_an_mt19937_rng_from_its_output"}
rand = ""
