[package]
name = "_40_implement_an_e3_rsa_broadcast_attack"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
diffie_hellman_starter_1 = {path = "../../../hacks/diffie_hellman/diffie_hellman_starter_1"}
