[package]
name = "_44_dsa_nonce_recovery_from_repeated_nonce"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
diffie_hellman_starter_1 = {path = "../../../hacks/diffie_hellman/diffie_hellman_starter_1"}
rayon = "1.5.1"
sha-1 = "0.9.6"
hex = "0.4"
