[package]
name = "confusion_through_substitution"
version = "0.1.0"
authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
ascii = "1.0.0"
generic-array = "0.14.4"
structure_of_aes = { path = "../structure_of_aes" }
